# poids-ideal

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/: poids-ideal.py
