[metadata]
name = poids-ideal-sami-lejmi
version = 0.1
author = Sami Lejmi
author_email = sami.lejmi@edunet.tn
description = Module en Python qui permet de calculer le poids idéal ou poids santé selon plusieurs formules.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sami-lejmi/poids-ideal
project_urls =
    Bug Tracker = https://github.com/sami-lejmi/poids-ideal/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src